Fix T101907: restore snapping in node editor

Regression from 1edebb794b76